# learn-tauri

./: README.md  package.json  vite.config.js
_learn-tauri-ts-kysely/: .env  package.json  vite.config.ts
_learn-tauri-ts-kysely/script/kysely-codegen/: .env  package.json  pnpm-lock.yaml
_learn-tauri-ts-kysely/src/: App.tsx
_learn-tauri-ts-kysely/src-tauri/: Cargo.toml  tauri.conf.json
_learn-tauri-ts-kysely/src-tauri/src/: main.rs
database/: db-v1.0.0.db  db1.0.db  migrations.json  sqlite.db
database/migrations/: 0.sql  1.sql
database/releases/: migrations
public/txt/: tauri-webview-window-diff.txt
scripts/: bundleSqlToCBOR.js
src/: App.css  App.jsx  Initialization.jsx  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: database.rs  fs_paths.rs
src-tauri/src/db/: database.rs  migrations.rs
src/pages/: Deno.jsx  Fs.jsx  ManipulateWebWin.jsx  Solidjs.jsx  Sqlite.jsx  SqliteMigrRust.jsx
src/services/: fs.js
